# djeography

./: LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml  runtests.py
djeography/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  utils.py  views.py
djeography/migrations/: 0001_initial.py  0002_alter_entity_evaluation.py  0002_create_default_eval_levels.py  0003_alter_category_icon_alter_entity_description_and_more.py  0003_alter_entity_description.py
djeography/static/map/: leaflet-beautify-marker-icon.js
djeography/static/map/beautifymarker/: leaflet-beautify-marker-icon.css
djeography/templates/: _base.html
djeography/templates/map/: _address.html  _card_header.html  _contacts.html  _map_header.html  _map_script.html  _search_filter_form.html  change_form.html  list.html  map.html  popup.html
djeography/templatetags/: dictionary_extras.py
example/: README.md  requirements.txt
example/config/: settings.py  urls.py
example/pages/: views.py
example/templates/: _base.html  _pagination.html  homepage.html
example/templates/map/: _card_header.html  _search_message.html  detail.html  list.html
example/templates/pages/: homepage.html
tests/: test_settings.py  tests.py  urls.py
