[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "djeography"
version = "2025.5.1"
dependencies = [
    "django-geojson>=4.2.0",
    "django-leaflet @ git+https://github.com/g-fabiani/django-leaflet",
    "django-tinymce>=4.1.0",
]
description = "A django application for participatory and activist cartography."
readme = "README.md"
license = {file = "LICENSE"}
requires-python= ">=3.10"
authors = [
    {name = "Giulia Fabiani", email="giulia.fabiani01@gmail.com"}
]

classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Repository = "https://github.com/g-fabiani/djeography"
Issues = "https://github.com/g-fabiani/djeography/issues"

[dependency-groups]
dev = [
    "nox>=2025.5.1",
]
